# ipa-tool

./: README.md
ipa-tool/: README.md  pyproject.toml
ipa-tool/ipa_tool/: __init__.py  __main__.py  analyze_macho.py  calc_md5.py  create_infos.py  format_plist.py  get_icon.py  get_size.py  load_ipa.py  main.py
ipa_tool/: analyze_macho.py  create_infos.py  format_plist.py  get_icon.py  main.py
