[tool.poetry]
name = "ipa-tool"
version = "1.5.0"
description = "Simple tool for getting infos from Apple ipa archive"
authors = ["DrEgg <dev@dregg.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.9"
lief = "^0.12.3"
typer = "^0.6.1"
rich = "^12.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ipa-tool = "ipa_tool.main:app"